# agent-ia-rag-test

./: .gitignore  README.md  main.py  pyproject.toml
frontend/: package.json  tailwind.config.ts  tsconfig.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
tools/: clean_up_text.py  speechify_wave.py
